--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -62,6 +62,7 @@ $border-color: $lighter-gray !default;
 $form-background-color: $lighter-gray !default;
 $footer-background-color: black !default;
 $footer-text-color: white !default;
+$footer-text-size: 16px !default;
 
 $primary-color: #7a8288 !default;
 $success-color: #62c462 !default;
